plugins/my-wallets/components/sidepanel/sidepanel.scss
.content-background {
  background: white;
  display: flex;
  flex-direction: column;
  height: auto;
  width: 100%;
}

.content-container {
  height: 100%;
  padding: 25px;
  width: 100%;
  overflow-x: hidden;

  .generate-label {
    display: inline-block;
    margin-top: 7%;
  }

  .button-box {
    align-items: center;
    background: #F4FAFC;
    border-radius: 6px;
    display: flex;
    height: 180px;
    justify-content: center;
    width: 100%;
  }

  .keep-secret-text {
    font-family: Lato;
    font-style: normal;
    font-weight: normal;
    font-size: 11px;
    line-height: 15px;
  }

  .multi-address-prompt {
    display: flex;
    justify-content: space-between;
    align-items: center;
    margin-top: 4%;
    margin-bottom: 18%
  }
}

.content-footer {
  display: flex;
  height: auto;
  justify-content: flex-end;
  padding: 23px 40px;
  width: 100%;
}

